# arcweight

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  cargo.toml  clippy.toml  mathjax-config.js  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
benches/: benchmarks.rs  main.rs
benches/core/: basic_operations.rs  closure_ops.rs  composition.rs  concat.rs  creation.rs  determinization.rs  epsilon_removal.rs  intersect.rs  minimization.rs  reverse.rs  shortest_path.rs  union.rs
benches/fst_types/: fst_type_comparison.rs  mod.rs
benches/io/: binary_format.rs  deserialization.rs  serialization.rs
benches/memory/: arc_storage.rs  memory_operations.rs  memory_usage.rs  state_management.rs
benches/optimization/: epsilon_removal.rs  minimization.rs  optimization.rs  weight_pushing.rs
benches/parallel/: arc_processing.rs  parallel_operations.rs  parallel_ops.rs  parallel_processing.rs  parallel_state_processing.rs  state_processing.rs  weight_processing.rs
benches/semirings/: mod.rs  semiring_fst_ops.rs  semiring_operations.rs
docs/: README.md  SUMMARY.md  api-reference.md  architecture.md  benchmarks.md  bibliography.bib  compatibility.md  contributing.md  development.md  faq.md  guide.md  installation.md  internals.md  quick-start.md  security.md
docs/architecture/: README.md  algorithm-architecture.md  design-patterns.md  design-philosophy.md  extension-points.md  fst-implementations.md  mathematical-foundations.md  memory-management.md  performance.md  system-architecture.md  trait-system.md
docs/core-concepts/: README.md  algorithms.md  fsts.md  semirings.md
docs/examples/: README.md  advanced-usage.md  cookbook.md  edit_distance.md  fst_composition.md  getting-started.md  morphological_analyzer.md  number_date_normalizer.md  phonological_rules.md  pronunciation_lexicon.md  transliteration.md  word_correction.md
docs/examples/linguistic-applications/: README.md  morphological_analyzer.md  phonological_rules.md
docs/examples/practical-applications/: README.md  number_date_normalizer.md  pronunciation_lexicon.md  transliteration.md
docs/examples/text-processing/: README.md  edit_distance.md  spell_checking.md  string_alignment.md
docs/working-with-fsts/: README.md  advanced-topics.md  core-operations.md  operations-overview.md  optimization-operations.md  path-operations.md  structural-operations.md
examples/: basic_usage.rs  composition.rs  edit_distance.rs  fst_composition.rs  morphological_analyzer.rs  number_date_normalizer.rs  phonological_rules.rs  pronunciation_lexicon.rs  shortest_path.rs  speech_recognition.rs  spell_checking.rs  string_alignment.rs  transliteration.rs  word_correction.rs
scripts/: README.md  ci-check.sh
src/: lib.rs  prelude.rs
src/algorithms/: arc_sort.rs  arc_sum.rs  arc_unique.rs  closure.rs  compose.rs  concat.rs  condense.rs  connect.rs  determinize.rs  difference.rs  encode.rs  intersect.rs  isomorphic.rs  minimize.rs  mod.rs  partition.rs  project.rs  prune.rs  push.rs  randgen.rs  replace.rs  reverse.rs  reweight.rs  rmepsilon.rs  shortest_distance.rs  shortest_path.rs  state_sort.rs  synchronize.rs  topsort.rs  union.rs  weight_convert.rs
src/arc/: mod.rs
src/fst/: cache_fst.rs  compact_fst.rs  const_fst.rs  conversion.rs  lazy_fst.rs  mod.rs  traits.rs  vector_fst.rs
src/io/: binary_format.rs  mod.rs  openfst_compat.rs  text_format.rs
src/optimization/: cache_optimization.rs  memory_pool.rs  mod.rs  simd_ops.rs
src/properties/: mod.rs  traits.rs
src/semiring/: boolean.rs  integer.rs  log.rs  minmax.rs  mod.rs  probability.rs  product.rs  real.rs  string.rs  traits.rs  tropical.rs
src/semiring/gallic/: mod.rs  variant.rs  weight.rs  weight_semiring.rs
src/semiring/gallic/variants/: left.rs  min.rs  mod.rs  restrict.rs  right.rs  union.rs
src/utils/: encode.rs  mod.rs  queue.rs  symbol_table.rs
tests/: algorithms_integration_tests.rs  algorithms_tests.rs  arc_tests.rs  distance_and_arc_ops.rs  encode_decode_integration.rs  end_to_end_tests.rs  fst_integration_tests.rs  fst_tests.rs  integer_semiring_integration.rs  integration_tests.rs  io_integration_tests.rs  io_tests.rs  isomorphic_integration.rs  properties.rs  properties_tests.rs  property_tests.rs  proptests.rs  semiring_integration_tests.rs  semiring_tests.rs  state_sort_integration.rs  utils_tests.rs
